Update sample scan infobox labels, and homepage

--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -165,13 +165,13 @@
                 <div class="scan-info-block tw-opacity-100 hover:tw-opacity-0 tw-transition-opacity tw-duration-300 tw-z-10 tw-hidden tw-text-white md:tw-flex tw-flex-col tw-gap-2 tw-absolute tw-left-4 tw-top-4 tw-bg-black/40 tw-backdrop-blur-md tw-p-6">
                   {% if block.settings.camera != blank %}
                     <div class="tw-flex tw-flex-col tw-gap-1">
-                      <span class="tw-uppercase tw-text-xs tw-font-bold">Camera</span>
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Scanning camera</span>
                       <span>{{ block.settings.camera }}</span>
                     </div>
                   {% endif %}
                   {% if block.settings.lens != blank %}
                     <div class="tw-flex tw-flex-col tw-gap-1">
-                      <span class="tw-uppercase tw-text-xs tw-font-bold">Lens</span>
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Scanning lens</span>
                       <span>{{ block.settings.lens }}</span>
                     </div>
                   {% endif %}
@@ -209,13 +209,13 @@
                   <div class="tw-z-10 tw-grid tw-grid-cols-2 tw-gap-x-2 tw-gap-y-4">
                     {% if block.settings.camera != blank %}
                       <div class="tw-flex tw-flex-col tw-gap-1">
-                        <span class="tw-uppercase tw-text-xs tw-font-bold">Camera</span>
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Scanning camera</span>
                         <span>{{ block.settings.camera }}</span>
                       </div>
                     {% endif %}
                     {% if block.settings.lens != blank %}
                       <div class="tw-flex tw-flex-col tw-gap-1">
-                        <span class="tw-uppercase tw-text-xs tw-font-bold">Lens</span>
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Scanning lens</span>
                         <span>{{ block.settings.lens }}</span>
                       </div>
                     {% endif %}
