--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -44,8 +44,6 @@
   .image-container-{{ section.id }} {
     width: 100%;
     height: 100%;
-    max-width: 65vw;
-    /* aspect-ratio: 1.5; */
   }
 
   .image-container-{{ section.id }}
@@ -59,6 +57,10 @@
       padding-top: {{ section.settings.padding_top }}px;
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
+
+    .image-container-{{ section.id }} {
+    max-width: 65vw;
+  }
 
     .sample-height {
       max-height: {{ section.settings.content_height }}px
