--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -228,6 +228,7 @@
 .product__info-container .product__description,
 .product__info-container .icon-with-text {
   margin: 2.5rem 0;
+  max-width: 44rem;
 }
 
 .product__text {
