--- a/assets/base.css
+++ b/assets/base.css
@@ -1156,6 +1156,7 @@ deferred-media {
 .button--tertiary {
   --color-button: var(--color-secondary-button);
   --color-button-text: var(--color-secondary-button-text);
+  border: 1px solid black!important
 }
 
 .button--tertiary {
