--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -58,7 +58,11 @@
       >
         {%- if card_product.featured_media -%}
           <div class="card__media{% if image_shape and image_shape != 'default' %} shape--{{ image_shape }} color-{{ settings.card_color_scheme }} gradient{% endif %}">
-            <div class="media media--transparent media--hover-effect">
+            {% if card_product.tags contains 'Digital download' %}
+              <span class="digital-product-badge">{% render 'tc-lucide-icon'
+                , icon_name: "lucide-arrow-down-to-line" %} DIGITAL CONTENT</span>
+            {% endif %}  
+          <div class="media media--transparent media--hover-effect">
               {% comment %}theme-check-disable ImgLazyLoading{% endcomment %}
               <img
                 srcset="
@@ -106,6 +110,7 @@
           </div>
         {%- endif -%}
         <div class="card__content">
+         
           <div class="card__information">
             <h3
               class="card__heading"
@@ -556,6 +561,9 @@
         <div
           class="card__media {% if image_shape and image_shape != 'default' %} shape--{{ image_shape }} color-{{ settings.card_color_scheme }} gradient{% endif %}"
         >
+        {% if card_product.tags contains 'Digital download' %}
+          <span class="digital-product-badge">hello</span>
+        {% endif %}
           <div
             class="media media--transparent"
           >
