--- a/snippets/digital-product-confirmation.liquid
+++ b/snippets/digital-product-confirmation.liquid
@@ -18,7 +18,7 @@
   </label>
   <input
     required
-    class='tw-text-3xl tw-px-3 tw-py-2 tw-shrink-0 tw-border tw-bg-white tw-w-full'
+    class='tw-px-3 tw-py-2 tw-shrink-0 tw-border tw-bg-white tw-w-full'
     id='confirmation'
     placeholder="Type your initials here"
     type='text'
