--- a/snippets/tc-lucide-icon.liquid
+++ b/snippets/tc-lucide-icon.liquid
@@ -31,6 +31,8 @@
       {{ "lucide-star.svg" | inline_asset_content }}
       {% when "lucide-shield-check" %}
         {{ "lucide-shield-check.svg" | inline_asset_content }}
+        {% when "lucide-arrow-down-to-line" %}
+          {{ "lucide-arrow-down-to-line.svg" | inline_asset_content }}
   {% else %}
     <!-- Optional: Handle case when the icon name doesn't match any files -->
     <span>Icon not found</span>
